judge and speaker added

--- a/judges.html
+++ b/judges.html
@@ -1358,7 +1358,7 @@
               <div class="judge-info">
                 <h3>Rami El Dokany</h3>
                 <h4>
-                  Secretary General, Arab Federation of Capital Markets (AFCM) 
+                  Secretary General, Arab Federation of Capital Markets (AFCM)
                 </h4>
                 <p>
                   Over 20 years of experience in private equity, investment
@@ -1581,7 +1581,45 @@
               </div>
             </div>
           </div>
-
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="judge-card">
+              <div class="judge-image">
+                <img
+                  src="img/judges/Alice Iribagiza.jpg"
+                  alt="Alice Iribagiza"
+                />
+                <div class="judge-category">
+                  Market Development & Sustainability Expert
+                </div>
+                <div class="judge-overlay">
+                  <div class="judge-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="judge-info">
+                <h3>Alice Iribagiza</h3>
+                <h4>
+                  Head of Market Development and Sustainability at the Rwanda
+                  Stock Exchange (RSE)
+                </h4>
+                <p>
+                  Focused on driving growth and fostering sustainable practices
+                  within the financial market.
+                </p>
+                <a
+                  href="#"
+                  class="judge-btn"
+                  data-toggle="modal"
+                  data-target="#judgeModal18"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
           <!-- Additional judge cards will be added here -->
         </div>
       </div>
@@ -4116,6 +4154,85 @@
                   leadership role, enables him to assess both the strategic
                   soundness and practical implementation feasibility of ESG
                   initiatives across diverse African markets.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Judge Modal 18: Alice Iribagiza -->
+    <div
+      class="modal fade"
+      id="judgeModal18"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="judgeModal18Label"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="judgeModal18Label">Alice Iribagiza</h5>
+            <button
+              type="button"
+              class="close text-white"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-3">
+                <img
+                  src="img/judges/Alice Iribagiza.jpg"
+                  alt="Alice Iribagiza"
+                  class="img-fluid rounded mb-3"
+                />
+              </div>
+              <div class="col-md-9">
+                <h5>
+                  Head of Market Development and Sustainability at the Rwanda
+                  Stock Exchange (RSE)
+                </h5>
+                <p>
+                  Alice IRIBAGIZA; As the Head of Market Development and
+                  Sustainability at the Rwanda Stock Exchange (RSE), she is
+                  focused on driving growth and fostering sustainable practices
+                  within the financial market. Her journey began at the Rwanda
+                  Social Security Board (RSSB) in Treasury department, before
+                  transitioning to the Rwanda Stock Exchange.
+                </p>
+                <p>
+                  Throughout her tenure at the RSE, she has held various
+                  positions, starting as an Accountant and progressing to Head
+                  of Finance and Administration before assuming her current
+                  role. She's spearheaded several key projects, including
+                  initiatives to support the development of SMEs and other
+                  corporates, resulting in successful fundraisings. She also
+                  manages the Green Exchange Window, a platform dedicated to
+                  promoting green products and services. Additionally, she is a
+                  member of the RSE Market Development Board Committee and the
+                  African Securities Exchanges Association Market Development
+                  Committee. She is also a member of the Rwanda ISSB steering
+                  committee, and an alumnus of the MI/IFC Capital Market
+                  program.
+                </p>
+                <p>
+                  Her expertise spans corporate finance, financial planning
+                  &analysis, business restructuring, and regulatory compliance.
+                  She is dynamic and passionate about Financial Excellence and
+                  Value Creation.
+                </p>
+                <p>
+                  She holds a bachelor’s degree in economics majoring in Money
+                  and Banking, master’s in finance & accounting from Mount Kenya
+                  University, and a postgraduate certificate in Capital Markets
+                  from the George Washington University. She is also a certified
+                  compliance professional from the International Academy.
+                  Furthermore, she is the co-founder of the Pesos Investment Co.
                 </p>
               </div>
             </div>
