--- a/speakers.html
+++ b/speakers.html
@@ -781,6 +781,8 @@
     <header class="header-area">
       <div class="container">
         <div class="row">
+            <!-- Speaker - Naseer Ahmed Akhtar -->
+            
             <!-- Speaker - Jean Bosco Iyacu -->
             
             <!-- Speaker - Cecil Foster -->
@@ -1545,7 +1547,31 @@
               </div>
             </div>
           </div>
-
+          <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Naseer Ahmed.jpg" alt="Naseer Ahmed Akhtar" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Mr. Naseer Ahmed Akhtar</h3>
+                  <h4>President & CEO, InfoTech (Pvt) Limited</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalNaseerAhmedAkhtar"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
           <!-- Speaker 19: Rami El Dokany -->
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="capital-markets">
@@ -1864,6 +1890,52 @@
       </div>
     </div>
     <!-- Speaker Modal 3 -->
+      <!-- Speaker Modal - Naseer Ahmed Akhtar -->
+      <div
+        class="modal fade speaker-modal"
+        id="speakerModalNaseerAhmedAkhtar"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Speaker Profile</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="speaker-modal-image">
+                    <img src="img/speakers/Naseer Ahmed.jpg" alt="Naseer Ahmed Akhtar" />
+                  </div>
+                  <div class="speaker-modal-social">
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="speaker-modal-info">
+                    <h3>Mr. Naseer Ahmed Akhtar</h3>
+                    <h4>President & CEO, InfoTech (Pvt) Limited</h4>
+                    <div class="speaker-modal-bio">
+                      <p>Naseer A. Akhtar is the President and CEO of InfoTech Group, a position he has held since the founding of InfoTech in 1995. As a successful entrepreneur, Naseer A. Akhtar brought InfoTech to profitability and continues to build on that success with double-digit year-on-year growth. He is a sought after speaker, mentor, has served as the Chairman of Pakistan’s industry association P@SHA and has been honored with numerous industry awards and accolades.</p>
+                      <p>Naseer A. Akhtar sets the corporate direction and strategy for all lines of business. He focuses on customers, strategy and innovation. He has been responsible for multimillion-dollar revenue generating product roadmaps that have disrupted major industries like Banking & Capital Markets, GovTech (G2B & G2C Services), RegTech (Regulations, Compliances, Fraud Detection), Utilities, Smart Grids, and Transportation.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Speaker Modal - Jean Bosco Iyacu -->
       <div
         class="modal fade speaker-modal"
