judge and speaker edited

--- a/judges.html
+++ b/judges.html
@@ -1020,7 +1020,7 @@
               </div>
               <div class="judge-info">
                 <h3>Justin Bgoni</h3>
-                <h4>Chartered Accountant & Former CFO NZX</h4>
+                <h4>CEO of Zimbabwe Stock Exchange (ZSE), Chartered Accountant & Former CFO NZX</h4>
                 <p>
                   Chartered Accountant with over 24 years of international
                   experience in financial and public sectors. Former CFO at New
