--- a/judges.html
+++ b/judges.html
@@ -1020,7 +1020,10 @@
               </div>
               <div class="judge-info">
                 <h3>Justin Bgoni</h3>
-                <h4>CEO of Zimbabwe Stock Exchange (ZSE), Chartered Accountant & Former CFO NZX</h4>
+                <h4>
+                  CEO of Zimbabwe Stock Exchange (ZSE), Chartered Accountant &
+                  Former CFO NZX
+                </h4>
                 <p>
                   Chartered Accountant with over 24 years of international
                   experience in financial and public sectors. Former CFO at New
@@ -2981,126 +2984,80 @@
               <div class="col-md-9">
                 <h5>Professional Background</h5>
                 <p>
-                  An investment professional with over 20 years of experience in
-                  private equity investments, investment banking and corporate
-                  business planning. Currently serving as Executive Chairman of
-                  the Egyptian Exchange, bringing extensive expertise in capital
-                  markets development and operations.
+                  Rami El Dokany has more than twenty years of professional
+                  experience in the field of capital markets private equity,
+                  investments, corporate finance, strategic planning and
+                  business development, accompanied by a strong educational
+                  background, from prominent local and international
+                  institutions. El Dokany was appointed as the Executive
+                  Chairman of The Egyptian Exchange (EGX) on the 25th of August
+                  2022 till 24th of August 2023.
                 </p>
 
-                <h5>Leadership Roles</h5>
                 <p>
-                  <strong>Executive Chairman, Egyptian Exchange:</strong>
-                  Leading one of the most significant capital markets in the
-                  Middle East and North Africa region, overseeing market
-                  development, regulation, and strategic initiatives.
-                </p>
-                <p>
-                  <strong>Head of Arab Federation of Exchanges:</strong> Leading
-                  the industry association that includes 17 exchanges, 4
-                  clearing houses and several industry players, with total
-                  market capitalization above USD 3.2 billion. This role
-                  involves coordinating regional capital market development and
-                  promoting best practices across Arab markets.
-                </p>
-
-                <h5>Entrepreneurial & Investment Activities</h5>
-                <ul>
-                  <li>
-                    <strong>Fintech Investment:</strong> Actively investing in
-                    Fintech startups in Egypt, contributing to the digital
-                    transformation of financial services
-                  </li>
-                  <li>
-                    <strong>Founder of Inclusion:</strong> Founded a digital
-                    payments platform for businesses, addressing the growing
-                    need for digital financial solutions
-                  </li>
-                  <li>
-                    <strong>Founder of Pride Capital:</strong> Established an
-                    investment fund to invest in promising startups, supporting
-                    entrepreneurship and innovation
-                  </li>
-                </ul>
-
-                <h5>Board & Advisory Positions</h5>
-                <ul>
-                  <li>
-                    Board member at BM Lease (leasing company owned by Banque
-                    Misr)
-                  </li>
-                  <li>
-                    Investment Committee member at the Insurance Holding Company
-                  </li>
-                  <li>
-                    Consultant at the World Bank, contributing to international
-                    development finance initiatives
-                  </li>
-                </ul>
-
-                <h5>Industry Experience</h5>
-                <p>
-                  Has worked closely with major financial institutions in Egypt
-                  including private equity firms, commercial banks, insurance
-                  firms and pension funds on several strategic projects. This
-                  extensive network and experience provides deep insights into
-                  the financial services ecosystem and capital market
-                  operations.
+                  Prior to this, in 2019, Rami was appointed as Secretary
+                  General of the Arab Federation of Capital Markets, to
+                  formulate a common vision for the Arab Capital markets. Arab
+                  Federation of Capital Markets is the home for more than 24
+                  Arab exchanges and clearing houses, as well as many prominent
+                  brokerage firms throughout the Arab World During his post as
+                  the Secretary General of the AFCM, he managed, to tailor a
+                  strategic restructuring program of the federation, allowing
+                  more inclusion among its members, abiding to governance
+                  practices and providing a sustainable path for the federation,
+                  taking its revenues from US$ 177k in 2019 to over USS 1
+                  million by the end of 2024.
                 </p>
 
-                <h5>Education & Qualifications</h5>
-                <ul>
-                  <li>MSc degree in Finance and M&As - University of Wales</li>
-                  <li>Diploma in Investments - Cairo</li>
-                  <li>Diploma in Feasibility Studies - Cairo</li>
-                </ul>
-
-                <h5>Expertise Areas</h5>
-                <ul>
-                  <li>
-                    <strong>Capital Markets Development:</strong> Extensive
-                    experience in exchange operations and market infrastructure
-                  </li>
-                  <li>
-                    <strong>Private Equity & Investment Banking:</strong> Over
-                    two decades of investment and financial services experience
-                  </li>
-                  <li>
-                    <strong>Fintech Innovation:</strong> Active involvement in
-                    digital financial services and startup ecosystem
-                  </li>
-                  <li>
-                    <strong>Regional Market Integration:</strong> Leadership
-                    role in Arab Federation of Exchanges
-                  </li>
-                  <li>
-                    <strong>Corporate Governance:</strong> Board experience
-                    across multiple financial institutions
-                  </li>
-                  <li>
-                    <strong>Strategic Planning:</strong> Corporate business
-                    planning and development expertise
-                  </li>
-                </ul>
-
-                <h5>ESG & Sustainable Finance</h5>
                 <p>
-                  Through his leadership roles at the Egyptian Exchange and Arab
-                  Federation of Exchanges, Rami brings valuable insights into
-                  sustainable finance practices, market development, and ESG
-                  integration in capital markets. His experience with diverse
-                  financial institutions and regulatory environments provides a
-                  comprehensive perspective on evaluating ESG initiatives and
-                  their impact on market development.
+                  Prior to this, in 2019, Rami was appointed as Secretary
+                  General of the Arab Federation of Capital Markets, to
+                  formulate a common vision for the Arab Capital markets. Arab
+                  Federation of Capital Markets is the home for more than 24
+                  Arab exchanges and clearing houses, as well as many prominent
+                  brokerage firms throughout the Arab World During his post as
+                  the Secretary General of the AFCM, he managed, to tailor a
+                  strategic restructuring program of the federation, allowing
+                  more inclusion among its members, abiding to governance
+                  practices and providing a sustainable path for the federation,
+                  taking its revenues from US$ 177k in 2019 to over USS 1
+                  million by the end of 2024.
                 </p>
-
-                <h5>Regional Impact</h5>
                 <p>
-                  His dual role as head of a major national exchange and leader
-                  of a regional federation provides unique insights into both
-                  local market dynamics and regional capital market integration
-                  challenges and opportunities, particularly relevant for
-                  African capital market development and ESG implementation.
+                  Rami co-founded Pride Capital in 2017 to utilize his long
+                  experience in financial services and investments and passion
+                  to technology, and recently launched a fintech accelerator
+                  with Start-up boot camp in Cairo - the program is supported by
+                  Alex Bank, Visa, IFC, GIZ, Pharos Holding, Ayady & Export
+                  Development Bank of Egypt, and has invested in more than 11
+                  startups in 1 year.
+                </p>
+                <p>
+                  Rami was a Board member of BM Lease- subsidiary to Banque
+                  Misr, and an Investment committee member of the VC program of
+                  the Social Development Fund (in cooperation With the World
+                  Bank; where he approved several investments in debt and equity
+                  with multiple start-ups and accelerators like Cairo based
+                  FlatoLabs, as well a former Investment Committee member of the
+                  Insurance Holding Co.
+                </p>
+                <p>
+                  His last post was VP at Al-Ahly Capital Holding - the
+                  investment arm of the National Bank of Egypt. During his post,
+                  he joined the Board of Directors of one of the leading oil
+                  refineries in Alexandria - Alexandria Mineral Oils Co. and
+                  handled the strategic restructuring of the company's investors
+                  relations and approach to the Capital Markets. Before that,
+                  Rami worked in HC investment banking, Etisalat Misr,
+                  LINKdotNET, and MIBank.
+                </p>
+                <p>
+                  Rami Holds an M.Sc. From Wales University & B.Sc. in economics
+                  from Cairo University. As well as several executive
+                  certificates including Oxford University Fintech program,
+                  Cambridge University's strategy for COs program, London
+                  Business School Private Equity program, and Amsterdam
+                  Institute of Finance Valuation program.
                 </p>
               </div>
             </div>
