--- a/sponsors.html
+++ b/sponsors.html
@@ -849,7 +849,28 @@
                     alt="nasdaq"
                     class="sponsor-logo"
                   />
-                  </div>
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/AFR.png"
+                    alt="AFR"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/AGACIRO.png"
+                    alt="AGACIRO"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/Kigali Serena Hotel.png"
+                    alt="Kigali Serena Hotel"
+                    class="sponsor-logo"
+                  />
+                </div>
               </div>
             </div>
           </div>
