--- a/index.html
+++ b/index.html
@@ -1517,6 +1517,151 @@
     </section>
     <!-- About Section End -->
 
+    <!-- President's Welcome Note Section Start -->
+    <section class="section" style="background-color: #f9f9f9">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-header">
+              <h2>Welcome from the President</h2>
+              <p>A message from the President of ASEA</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row align-items-center">
+          <div class="col-lg-4 col-md-5 mb-4 mb-md-0">
+            <div class="president-image-wrapper" style="text-align: center">
+              <img
+                src="img/speakers/Rwabukumba.jpg"
+                alt="ASEA President"
+                style="
+                  width: 100%;
+                  max-width: 350px;
+                  border-radius: 10px;
+                  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+                  border: 5px solid white;
+                "
+              />
+              <div style="margin-top: 20px">
+                <h4
+                  style="
+                    color: var(--primary-color);
+                    margin-bottom: 5px;
+                    font-weight: 700;
+                  "
+                >
+                  Pierre Célestin Rwabukumba
+                </h4>
+                <p
+                  style="
+                    color: var(--secondary-color);
+                    font-weight: 600;
+                    margin-bottom: 0;
+                  "
+                >
+                  President, ASEA
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-8 col-md-7">
+            <div class="president-message" style="padding-left: 20px">
+              <div
+                style="
+                  position: relative;
+                  padding-left: 30px;
+                  border-left: 4px solid var(--secondary-color);
+                "
+              >
+                <p
+                  style="
+                    font-size: 1.05rem;
+                    line-height: 1.8;
+                    color: #555;
+                    margin-bottom: 20px;
+                  "
+                >
+                  Dear Colleagues and Friends,
+                </p>
+                <p
+                  style="
+                    font-size: 1.05rem;
+                    line-height: 1.8;
+                    color: #555;
+                    margin-bottom: 20px;
+                  "
+                >
+                  It is with great pleasure that I welcome you to the 28th ASEA
+                  Annual Conference, taking place in the beautiful city of
+                  Kigali, Rwanda. This year's theme, "Adapting to Global Market
+                  Shifts: Strategies for Resilience and Growth," reflects the
+                  dynamic challenges and opportunities facing African capital
+                  markets in today's rapidly evolving global landscape.
+                </p>
+                <p
+                  style="
+                    font-size: 1.05rem;
+                    line-height: 1.8;
+                    color: #555;
+                    margin-bottom: 20px;
+                  "
+                >
+                  As we gather together, we will explore innovative strategies
+                  that enhance market resilience, promote sustainable growth,
+                  and strengthen the integration of African exchanges into the
+                  global financial ecosystem. This conference provides a unique
+                  platform for knowledge sharing, collaboration, and building
+                  partnerships that will shape the future of our markets.
+                </p>
+                <p
+                  style="
+                    font-size: 1.05rem;
+                    line-height: 1.8;
+                    color: #555;
+                    margin-bottom: 20px;
+                  "
+                >
+                  I encourage you to actively participate in the discussions,
+                  engage with fellow delegates, and make the most of the
+                  networking opportunities available. Together, we can drive
+                  meaningful change and position African capital markets as key
+                  players in the global economy.
+                </p>
+                <p
+                  style="
+                    font-size: 1.05rem;
+                    line-height: 1.8;
+                    color: #555;
+                    margin-bottom: 0;
+                  "
+                >
+                  I look forward to fruitful deliberations and wish you all a
+                  successful and enriching conference.
+                </p>
+                <div style="margin-top: 30px">
+                  <p
+                    style="
+                      font-weight: 600;
+                      color: var(--primary-color);
+                      margin-bottom: 5px;
+                    "
+                  >
+                    Pierre Célestin Rwabukumba
+                  </p>
+                  <p style="color: var(--secondary-color); font-style: italic">
+                    President, African Securities Exchanges Association (ASEA)
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- President's Welcome Note Section End -->
+
     <!-- ESG Event Banner Start (moved below About section) -->
     <section class="esg-banner-section">
       <div class="container">
