--- a/speakers.html
+++ b/speakers.html
@@ -1653,6 +1653,84 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Michael B Johnson -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="business-development">
+                <div class="speaker-image">
+                  <img src="img/speakers/Michael B. Johnsons Profile Picture.jpg" alt="Michael B Johnson" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Michael B Johnson</h3>
+                  <h4>Deputy Group Business Development Manager, Jamaica Stock Exchange</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalMichaelBJohnson"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Stefano Falciani -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="fintech">
+                <div class="speaker-image">
+                  <img src="img/speakers/Stefano Falciani PIC.jpeg" alt="Stefano Falciani" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Stefano Falciani</h3>
+                  <h4>International Development EMEA, Arqa Technologies</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalStefanoFalciani"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Ilya Prokopenko -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="fintech">
+                <div class="speaker-image">
+                  <img src="img/speakers/thumbnail_Илья Прокопенко 2023.jpg" alt="Ilya Prokopenko" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Ilya Prokopenko</h3>
+                  <h4>Director, Sales & Marketing, ARQA Technologies</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalIlyaProkopenko"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -3475,6 +3553,186 @@
                                       <p>Rami was a Board member of BM Lease- subsidiary to Banque Misr, and an Investment committee member of the VC program of the Social Development Fund (in cooperation With the World Bank; where he approved several investments in debt and equity with multiple start-ups and accelerators like Cairo based FlatoLabs, as well a former Investment Committee member of the Insurance Holding Co.</p>
                                       <p>His last post was VP at Al-Ahly Capital Holding - the investment arm of the National Bank of Egypt. During his post, he joined the Board of Directors of one of the leading oil refineries in Alexandria - Alexandria Mineral Oils Co. and handled the strategic restructuring of the company's investors relations and approach to the Capital Markets. Before that, Rami worked in HC investment banking, Etisalat Misr, LINKdotNET, and MIBank.</p>
                                       <p>Rami Holds an M.Sc. From Wales University & B.Sc. in economics from Cairo University. As well as several executive certificates including Oxford University Fintech program, Cambridge University's strategy for COs program, London Business School Private Equity program, and Amsterdam Institute of Finance Valuation program.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Michael B Johnson -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalMichaelBJohnson"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Michael B. Johnsons Profile Picture.jpg"
+                    alt="Michael B Johnson"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Michael B Johnson</h3>
+                  <h4>Deputy Group Business Development Manager, Jamaica Stock Exchange</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Michael B Johnson is the Deputy Group Business Development Manager at the Jamaica Stock Exchange. His role and duties include but not limited to growing the demand and supply sides of the Stock Market by identifying and meeting with company principals in Jamaica and overseas about using the Capital Market to grow their companies. He is also a key team member that develop and implement market education programmes for all stakeholders include Primary and High Schools, universities, and the investing public.
+                    </p>
+                    <p>
+                      He has over eighteen (18) years' experience in financial sectors and fifteen (15) Sales & Marketing, Communications, Event Planning and Sponsorship.
+                    </p>
+                    <p>
+                      During his eighteen years at the JSE he has led the logistic and planning for multiple Investor Fora, and Conferences that have generated significant revenue for the JSE Group. His logistic and planning experiences have seen him being invited to serve on the planning committee for the Bi-annual Jamaica Diaspora Conference team, and multiple Rotary District Conference.
+                    </p>
+                    <p>
+                      Mr. Johnson holds a Masters in Banking & Finance from Mona School of Business, a Bachelor in Marketing & Research form the University of Technology and a Teacher's Diploma from GC Foster College. He also holds a PMI Project Management certificate.
+                    </p>
+                    <p>
+                      Mr. Johnson has been a Rotary for sixteen (16) year and has served President of the Rotary Club of Kingston East & Port Royal 2015-16, and Past 7020 District Treasure 2020-21. He is a Paul Harris Fellow plus two and a Justice of the Peace for the parish of Kingston since 2015.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Stefano Falciani -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalStefanoFalciani"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Stefano Falciani PIC.jpeg"
+                    alt="Stefano Falciani"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Stefano Falciani</h3>
+                  <h4>International Development EMEA, Arqa Technologies</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Stefano Falciani is an international business leader with over two decades of experience in financial markets, fintech, and exchange technology. In his role at Arqa Technologies, he supports the company's growth and partnerships across global capital markets, engaging with exchanges, banks, and regulators to advance market infrastructure and innovation.
+                    </p>
+                    <p>
+                      Previously, Stefano held senior leadership positions at the London Stock Exchange Group, LIST UK, and Octopus Foundation Holding, and continues to advise financial institutions and fintech companies on international development and technological transformation.
+                    </p>
+                    <p>
+                      Stefano's expertise spans capital markets, digital assets, financial trading systems, and blockchain innovation, with a strong focus on enabling sustainable and inclusive market development in emerging economies.
+                    </p>
+                    <p>
+                      He holds a Degree in Economics (cum laude) from the University of Pisa.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Ilya Prokopenko -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalIlyaProkopenko"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/thumbnail_Илья Прокопенко 2023.jpg"
+                    alt="Ilya Prokopenko"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Ilya Prokopenko</h3>
+                  <h4>Director, Sales & Marketing, ARQA Technologies</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Total work experience in the financial market is about 10 years. He has been working in ARQA Technologies team since 2015. In 2019, he was appointed to the position of Director of Sales & Marketing.
+                    </p>
+                    <p>
+                      He has extensive practice in implementing the front, back, and middle office solutions in Sell side/ Buy side and the platforms for organizing exchange and off-exchange trading around the world.
+                    </p>
+                    <p>
+                      Before joining ARQA Technologies, Ilya managed purchasing and marketing in various foreign companies engaged in the supply of mining equipment (including the United Republic of Tanzania).
+                    </p>
                   </div>
                 </div>
               </div>
